added text animation

--- a/index.html
+++ b/index.html
@@ -1,131 +1,178 @@
-<!DOCTYPE HTML>
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Arindam Nath</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<link rel="icon" type = "image/x-icon" href="images/profile.png">
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-	</head>
-	<body class="is-preload">
+  <head>
+    <title>Arindam Nath</title>
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, user-scalable=no"
+    />
+    <link rel="stylesheet" href="assets/css/main.css" />
+    <link rel="icon" type="image/x-icon" href="images/profile.png" />
+    <noscript
+      ><link rel="stylesheet" href="assets/css/noscript.css"
+    /></noscript>
+  </head>
+  <body class="is-preload">
+    <!-- Wrapper-->
+    <div id="wrapper">
+      <!-- Nav -->
+      <nav id="nav">
+        <a href="#" class="icon solid fa-home"><span>Home</span></a>
+        <a href="#work" class="icon solid fa-folder"><span>Work</span></a>
+        <a href="#contact" class="icon solid fa-envelope"
+          ><span>Contact</span></a
+        >
+        <a
+          href="https://www.linkedin.com/in/arindam-nath-828334123/"
+          target="_blank"
+          class="icon brands fa-linkedin"
+          ><span>Linkedin</span></a
+        >
+      </nav>
 
-		<!-- Wrapper-->
-			<div id="wrapper">
+      <!-- Main -->
+      <div id="main">
+        <!-- Me -->
+        <article id="home" class="panel intro">
+          <header>
+            <h1 class="animate-charcter">Arindam Nath</h1>
+            <p>Full Stack Developer</p>
+            <div class="waviy">
+              <span style="--i: 1">D</span>
+              <span style="--i: 2">E</span>
+              <span style="--i: 3">V</span>
+              <span style="--i: 4">E</span>
+              <span style="--i: 5">L</span>
+              <span style="--i: 6">O</span>
+              <span style="--i: 7">P</span>
+              <span style="--i: 8">E</span>
+              <span style="--i: 9">R</span>
+            </div>
+          </header>
+          <a href="#work" class="jumplink pic">
+            <span class="arrow icon solid fa-chevron-right"
+              ><span>See my work</span></span
+            >
+            <img src="images/me.jpeg" alt="" />
+          </a>
+        </article>
 
-				<!-- Nav -->
-					<nav id="nav">
-						<a href="#" class="icon solid fa-home"><span>Home</span></a>
-						<a href="#work" class="icon solid fa-folder"><span>Work</span></a>
-						<a href="#contact" class="icon solid fa-envelope"><span>Contact</span></a>
-						<a href="https://www.linkedin.com/in/arindam-nath-828334123/" target="_blank" class="icon brands fa-linkedin"><span>Linkedin</span></a>
-					</nav>
+        <!-- Work -->
+        <article id="work" class="panel">
+          <header>
+            <h2>Work</h2>
+          </header>
+          <p>
+            Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum
+            eu elit. Vestibulum ante ipsum primis in faucibus orci luctus et
+            ultrices posuere cubilia luctus elit eget interdum.
+          </p>
+          <section>
+            <div class="row">
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="images/pic01.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="images/pic02.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="images/pic03.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="images/pic04.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="images/pic05.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="images/pic06.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="images/pic07.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="images/pic08.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="images/pic09.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="images/pic10.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="images/pic11.jpg" alt=""
+                /></a>
+              </div>
+              <div class="col-4 col-6-medium col-12-small">
+                <a href="#" class="image fit"
+                  ><img src="images/pic12.jpg" alt=""
+                /></a>
+              </div>
+            </div>
+          </section>
+        </article>
 
-				<!-- Main -->
-					<div id="main">
+        <!-- Contact -->
+        <article id="contact" class="panel">
+          <header>
+            <h2>Contact Me</h2>
+          </header>
+          <form action="https://formspree.io/f/xgeqvoky" method="POST">
+            <div>
+              <div class="row">
+                <div class="col-6 col-12-medium">
+                  <input type="text" name="name" placeholder="Name" />
+                </div>
+                <div class="col-6 col-12-medium">
+                  <input type="text" name="email" placeholder="Email" />
+                </div>
+                <div class="col-12">
+                  <input type="text" name="subject" placeholder="Subject" />
+                </div>
+                <div class="col-12">
+                  <textarea
+                    name="message"
+                    placeholder="Message"
+                    rows="6"
+                  ></textarea>
+                </div>
+                <div class="col-12">
+                  <input type="submit" value="Send Message" />
+                </div>
+              </div>
+            </div>
+          </form>
+        </article>
+      </div>
+    </div>
 
-						<!-- Me -->
-							<article id="home" class="panel intro">
-								<header>
-									<h1>Arindam Nath</h1>
-									<p>Full Stack Developer</p>
-								</header>
-								<a href="#work" class="jumplink pic">
-									<span class="arrow icon solid fa-chevron-right"><span>See my work</span></span>
-									<img src="images/me.jpeg" alt="" />
-								</a>
-							</article>
-
-						<!-- Work -->
-							<article id="work" class="panel">
-								<header>
-									<h2>Work</h2>
-								</header>
-								<p>
-									Phasellus enim sapien, blandit ullamcorper elementum eu, condimentum eu elit.
-									Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia
-									luctus elit eget interdum.
-								</p>
-								<section>
-									<div class="row">
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic01.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic02.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic03.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic04.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic05.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic06.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic07.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic08.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic09.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic10.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic11.jpg" alt=""></a>
-										</div>
-										<div class="col-4 col-6-medium col-12-small">
-											<a href="#" class="image fit"><img src="images/pic12.jpg" alt=""></a>
-										</div>
-									</div>
-								</section>
-							</article>
-
-						<!-- Contact -->
-							<article id="contact" class="panel">
-								<header>
-									<h2>Contact Me</h2>
-								</header>
-								<form action="https://formspree.io/f/xgeqvoky" method="POST">
-									<div>
-										<div class="row">
-											<div class="col-6 col-12-medium">
-												<input type="text" name="name" placeholder="Name" />
-											</div>
-											<div class="col-6 col-12-medium">
-												<input type="text" name="email" placeholder="Email" />
-											</div>
-											<div class="col-12">
-												<input type="text" name="subject" placeholder="Subject" />
-											</div>
-											<div class="col-12">
-												<textarea name="message" placeholder="Message" rows="6"></textarea>
-											</div>
-											<div class="col-12">
-												<input type="submit" value="Send Message" />
-											</div>
-										</div>
-									</div>
-								</form>
-							</article>
-
-					</div>
-
-			</div>
-
-		<!-- Scripts -->
-			<script src="assets/js/jquery.min.js"></script>
-			<script src="assets/js/browser.min.js"></script>
-			<script src="assets/js/breakpoints.min.js"></script>
-			<script src="assets/js/util.js"></script>
-			<script src="assets/js/main.js"></script>
-
-	</body>
+    <!-- Scripts -->
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/browser.min.js"></script>
+    <script src="assets/js/breakpoints.min.js"></script>
+    <script src="assets/js/util.js"></script>
+    <script src="assets/js/main.js"></script>
+  </body>
 </html>
