added discord in contacts

--- a/index.html
+++ b/index.html
@@ -93,6 +93,7 @@
 								<header>
 									<h2>Contact Me</h2>
 								</header>
+								<p>Discord: DoraTheExplora#9570</p>
 								<form action="https://formspree.io/f/xgeqvoky" method="POST">
 									<div>
 										<div class="row">
